# Package ######################################################################

[project]
name = "ya-fsdp"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
]

[project.optional-dependencies]
dev = [
    "codespell",
    "mypy",
    "ruff",
    "torchfix",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

# Linter tools #################################################################

[tool.ruff]
extend = "../ydt/pyproject.toml"
extend-exclude = ["ya_fsdp/ya_fsdp.py", "ya_fsdp/meta_param.py"]
force-exclude = true

[tool.mypy]
files = ["ya_fsdp"]
strict = true
allow_redefinition = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "yccl.*",
]
ignore_missing_imports = true

[tool.codespell]
ignore-words-list = ["nd"]
