# Package ######################################################################

[project]
name = "ya-fsdp"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
]

[project.optional-dependencies]
dev = [
    "codespell",
    "mypy",
    "ruff",
    "torchfix",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

# Linter tools #################################################################

[tool.ruff]
extend-exclude = ["ya_fsdp/ya_fsdp.py", "ya_fsdp/meta_param.py"]
force-exclude = true

[tool.ruff.lint]
extend-select = [
    "B",
    "C4",
    "D",
    "FURB",
    "G",
    "I",
    "LOG",
    "N",
    "PERF",
    "PL",
    "RSE",
    "RUF",
    "TC",
    "TID",
    "UP",
    "W",
]
ignore = [
    "D1",
    "PLR0402",
    "PLR0913",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = ["ya_fsdp"]
exclude = "(ya_fsdp/ya_fsdp.py|ya_fsdp/meta_param.py)"
strict = true
allow_redefinition = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "yccl.*",
]
ignore_missing_imports = true

[tool.codespell]
ignore-words-list = ["nd"]
